# wrach

./: .gitignore  Cargo.toml  README.md  build.rs
assets/shaders/: manifest.json  pack_new_particle_data.wgsl  particles_per_cell.wgsl  prefix_sum.wgsl  render.wgsl  types.wgsl  wrach_physics.spv  wrach_physics_shaders.spv
docs/: prior_art.md
examples/: print-frame-as-floats.rs  youre-a-pixel.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
runners/api/: Cargo.toml
runners/api/src/: lib.rs
runners/bevy/: Cargo.toml
runners/bevy/src/: compute.rs  config_app.rs  config_shader.rs  lib.rs  particle_store.rs  plugin.rs  spatial_bin.rs  state.rs
runners/bevy/src/compute/: 01_integration.rs  01_particles_cell_count.rs  02_particles_cell_count.rs  02_prefix_sum.rs  03_pack_particle_data.rs  03_prefix_sum.rs  04_integration.rs  04_pack_particle_data.rs  buffers.rs  builder.rs
runners/bevy/src/plugin/: bind_groups.rs  build.rs
runners/bevy/src/render/: draw_plugin.rs  graph_node.rs  pipeline.rs
runners/bevy/src/tests/: utils.rs
runners/wgpu/: Cargo.toml
runners/wgpu/src/: gpu_manager.rs  lib.rs
runners/wgpu/src/event_loop/: event_loop.rs  spawner.rs
runners/wgpu/src/event_looper/: event_loop.rs  mod.rs  spawner.rs
runners/wgpu/src/pipeline/: builder.rs  mod.rs  pipeline.rs
runners/wgpu/src/pipeliner/: builder.rs  pipeline.rs
shaders/: Cargo.toml
shaders/physics/: Cargo.toml
shaders/physics/src/: cell.rs  compute.rs  indices.rs  integrate.rs  lib.rs  neighbours.rs  particle.rs  particles.rs  world.rs  wrach_glam.rs
shaders/renderer/: Cargo.toml
shaders/renderer/src/: lib.rs
shaders/rust-gpu-compiler/: Cargo.toml
shaders/rust-gpu-compiler/src/: lib.rs  main.rs
shaders/shared/: Cargo.toml
shaders/shared/src/: lib.rs
shaders/src/: compute.rs  lib.rs  neighbours.rs  particle.rs  vertex.rs  workgroup.rs  world.rs  wrach_glam.rs
src/: framework.rs  gpu_manager.rs  lib.rs  main.rs  pipeline.rs
src/event_loop/: event_loop.rs  mod.rs
src/pipeline/: builder.rs  pipeline.rs
