[package]
name = "shaders"
version = "0.0.0"
authors = []
edition = "2018"

[lib]
crate-type = ["dylib"]

[dependencies]
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu", rev = "0866cf59", features = [ "glam" ] }
cfg-if = "1.0.0"

[target.'cfg(not(target_arch = "spirv"))'.dependencies]
crevice = { version = "0.8.0", features = ["glam"] }
# We need the native version of glam for crevice/bytemuck support
glam = { version = "0.19.0", features = ["bytemuck"] }
