[package]
name = "wrach-bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
wrach-physics-shaders = { path = "../../shaders/physics" }
wrach-cpu-gpu-shared = { path = "../../shaders/shared" }
rand = "0.8.5"
bytemuck = "1.18.0"

# Remove "shader_format_spirv" feature when this issue is fixed:
#   https://github.com/AnthonyTornetta/bevy_easy_compute/issues/7
bevy_easy_compute = { git = "https://github.com/tombh/bevy_easy_compute", rev = "f890dd33", features = ["shader_format_spirv"] }

[dev-dependencies]
wrach-api = { path = "../api" }

[lints]
workspace = true
