[package]
name = "wrach-bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
wrach-physics-shaders = { path = "../../shaders/physics" }
wrach-cpu-gpu-shared = { path = "../../shaders/shared" }
rand = "0.8.5"
bytemuck = "1.18.0"

bevy_easy_compute = {version = "0.15", features = [ "shader_format_spirv" ]}

[dev-dependencies]
wrach-api = { path = "../api" }

[lints]
workspace = true
