[package]
name = "wrach-wgpu"
version = "0.0.0"
authors = []
edition = "2018"

[dependencies]
wrach-physics-shaders = { path = "../../shaders/physics" }
rust-gpu-compiler = { path = "../../shaders/rust-gpu-compiler" }
futures = { version = "0.3", default-features = false, features = ["std", "executor"] }
wgpu = { version = "0.13.1", features = ["spirv", "vulkan-portability"] }
wgpu-hal = "0.13.2"
winit = { version = "0.27" }
bytemuck = "1.7.2"
crevice = { version = "0.11.0", features = ["glam"] }
rand = "0.8.5"
cgmath = "0.18.0"
env_logger = "0.9.0"
async-executor = "1.4.1"
pollster = "0.2.4"
log = "0.4.14"
cfg-if = "1.0.0"

