[package]
name = "wrach-physics-shaders"
version = "0.0.0"
authors = []
edition = "2018"

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu", features = [ "glam" ] }
cfg-if = "1.0.0"

[target.'cfg(not(target_arch = "spirv"))'.dependencies]
crevice = { version = "0.11.0", features = ["glam"] }
# We need the native version of glam for crevice/bytemuck support
glam = { version = "0.21.3", features = ["bytemuck"] }
